force-app/main/default/objects/Asset_Intake_Party__c/Asset_Intake_Party__c.object-meta.xml
<CustomObject>
    <label>Asset Intake Party</label>
    <nameField>
        <displayFormat>AIP-{00000}</displayFormat>
        <label>Asset Intake Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Intake Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>