force-app/main/default/objects/Asset_Intake_Party__c/fields/Other_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Party_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Party Name</label>
    <referenceTo>SymphonyLF__Entity__c</referenceTo>
    <relationshipName>Asset_Intake_Other_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>