force-app/main/default/objects/Asset_Intake_Party__c/fields/Related_Other_Party__c.field-meta.xml
<CustomField>
    <fullName>Related_Other_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Other Party</label>
    <referenceTo>SymphonyLF__Related_Other_Party__c</referenceTo>
    <relationshipName>Asset_Intake_Other_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>