force-app/main/default/objects/Asset_Intake_Party__c/fields/Represented_By_User__c.field-meta.xml
<CustomField>
    <fullName>Represented_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Represented By (User)</label>
    <referenceTo>SymphonyLF__Person__c</referenceTo>
    <relationshipLabel>Asset Intake Parties</relationshipLabel>
    <relationshipName>Asset_Intake_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>